Final Tweaks and bugs FIX

--- a/contact.html
+++ b/contact.html
@@ -204,11 +204,11 @@
                             <div class="form-row">
                                 <div class="form-group">
                                     <label class="form-label" for="name">Full Name</label>
-                                    <input type="text" id="name" class="form-input" placeholder="John Doe" required>
+                                    <input type="text" id="name" class="form-input" placeholder="Imran Khan" required>
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label" for="email">Email Address</label>
-                                    <input type="email" id="email" class="form-input" placeholder="john@example.com" required>
+                                    <input type="email" id="email" class="form-input" placeholder="google@example.com" required>
                                 </div>
                             </div>
                             
